# company-brain

./: .gitignore  README.md
.github/workflows/: ci.yml
api/: .env.example  .gitignore  README.md  pyproject.toml
api/app/: __init__.py  config.py  main.py
api/app/api/: __init__.py  deps.py
api/app/api/routes/: chat.py  documents.py  health.py
api/app/core/: __init__.py  devices.py  embeddings.py  factory.py  gemma.py  ingestion.py  llm.py  rag.py  transcription.py  vision.py
api/app/schemas/: __init__.py  chat.py  documents.py
api/evals/: README.md  __init__.py  dataset.py  metrics.py  run.py
api/evals/results/: latest.json  latest.md
api/tests/: conftest.py  test_chat.py  test_devices.py  test_documents.py  test_e2e_chat.py  test_e2e_ingestion.py  test_health.py  test_ingestion.py  test_rag_service.py  test_vision.py
api/tests/e2e_assets/: Carta Apresentacao Lucas.docx  Internal Pentesting Report.txt  README.md  notas.xlsx
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: Brand.tsx  Chat.tsx  Composer.tsx  DocumentItem.tsx  DocumentList.tsx  Dropzone.tsx  EmptyState.tsx  Markdown.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx  Sources.tsx  StatusBadge.tsx  SupportedTypes.tsx  Toaster.tsx  TypingIndicator.tsx
dashboard/src/hooks/: useChat.ts  useDocuments.ts  useHealth.ts  useToast.tsx
dashboard/src/lib/: api.ts  fileTypes.ts
