[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-brain-api"
version = "0.1.0"
description = "Company Brain API — RAG multimodal com Gemma 4 E2B, harrier-oss embeddings e ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Web
    # fastapi[standard] já inclui uvicorn[standard] (com uvloop) e o CLI `fastapi`.
    "fastapi[standard]>=0.115",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # RAG / orquestração
    "llama-index-core>=0.12",
    "llama-index-embeddings-huggingface>=0.4",
    "llama-index-vector-stores-chroma>=0.4",

    # Vector DB
    "chromadb>=0.5",

    # Modelos (Gemma 4 E2B + harrier embeddings) via Hugging Face
    "transformers>=4.57",
    "torch>=2.3",
    "torchvision>=0.18",
    "accelerate>=0.33",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.25",

    # Multimodal: áudio (STT) e parse de documentos/imagens
    "librosa>=0.10",
    "soundfile>=0.12",
    "pillow>=10.3",
    "pypdf>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "fpdf2>=2.7",  # gera PDFs reais nos testes e2e
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Permite que o CLI `fastapi` (dev/run) e ferramentas (VS Code, FastAPI Cloud)
# localizem o objeto da aplicação sem passar o caminho a cada chamada.
[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Por padrão NÃO roda os testes 'e2e' (que baixam/carregam modelos reais).
# Rode-os com: pytest -m e2e
addopts = "-q -m 'not e2e'"
markers = [
    "e2e: testes end-to-end com modelos reais (Gemma 4 + harrier); exigem CB_HF_TOKEN",
]

[tool.ruff]
line-length = 100
target-version = "py311"
