[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-brain-api"
version = "0.1.0"
description = "Company Brain API — RAG multimodal com gemini-3.1-flash-lite (Google AI Studio), embeddings text-embedding-3-large (OpenAI) e ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Web
    # fastapi[standard] já inclui uvicorn[standard] (com uvloop) e o CLI `fastapi`.
    "fastapi[standard]>=0.115",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # RAG / orquestração
    "llama-index-core>=0.12",
    "llama-index-embeddings-openai>=0.3",
    "llama-index-vector-stores-chroma>=0.4",

    # Vector DB
    "chromadb>=0.5",

    # LLM / ingestão multimodal: gemini-3.1-flash-lite via Google AI Studio (Gemini API).
    # Integração oficial do LlamaIndex (wrap do SDK google-genai), tanto para o
    # chat quanto para a descrição multimodal de imagens na ingestão.
    "llama-index-llms-google-genai>=0.1",
    "google-genai>=1.0",

    # Modelo local (Whisper STT) via Hugging Face / transformers
    "transformers>=4.57",
    "torch>=2.3",
    "accelerate>=0.33",
    "huggingface-hub>=0.25",

    # Multimodal: áudio (STT) e parse de documentos/imagens
    "librosa>=0.10",        # decodifica áudio (mp3/m4a/...) para o Whisper
    "soundfile>=0.12",
    "pillow>=10.3",
    "pdf2image>=1.17",      # rasteriza páginas de PDF (requer poppler no sistema)
    "pandas>=2.2",          # leitura tabular de planilhas .xlsx/.xlsm
    "openpyxl>=3.1",        # backend .xlsx do pandas + imagens embutidas
    "markitdown[docx]>=0.1",  # conversão de .docx para Markdown
    "python-docx>=1.1",     # extração de imagens embutidas em .docx
    "tabulate>=0.9",        # render tabular auxiliar
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Permite que o CLI `fastapi` (dev/run) e ferramentas (VS Code, FastAPI Cloud)
# localizem o objeto da aplicação sem passar o caminho a cada chamada.
[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Por padrão NÃO roda os testes 'e2e' (que baixam/carregam modelos reais).
# Rode-os com: pytest -m e2e
addopts = "-q -m 'not e2e'"
markers = [
    "e2e: testes end-to-end reais (gemini-3.1-flash-lite via API + Whisper local + embeddings OpenAI); exigem CB_GOOGLE_API_KEY, CB_OPENAI_API_KEY, CB_HF_TOKEN e arquivos em tests/e2e_assets",
]

[tool.ruff]
line-length = 100
target-version = "py311"
